<resources>
    <string name="app_name">Eventbrite</string>
    <string name="btn_login">Login</string>
    <string name="title">Events happen here</string>
    <string name="powered">Powered by E Entegy</string>
    <string name="eventbrite">eventbrite</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="Name">Nume</string>
    <string name="Email">Email</string>
    <string name="Phone">Phone</string>
    <string name="Password">Password</string>
    <string name="Register">Register</string>
    <string name="Cancel">Cancel</string>
    <string name="et_Data">Data of birth</string>
    <string name="et_DataBirth">Date of birth</string>
    <string name="label_events">Events</string>
</resources>